fix: configure Expo Web deployment for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,23 @@
   "outputDirectory": "dist",
   "installCommand": "bun install",
   "framework": null,
+  "functions": {},
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "env": {
+    "NEXT_TELEMETRY_DISABLED": "1"
+  }
 }
