--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "npx expo export --platform web --output-dir static",
-  "outputDirectory": "static",
+  "buildCommand": "npx expo export --platform web --output-dir dist",
+  "outputDirectory": "dist",
   "installCommand": "bun install",
   "framework": null,
-  "functions": {},
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "env": {
-    "NEXT_TELEMETRY_DISABLED": "1"
-  }
+  ]
 }
