--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,6 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": null,
-  "functions": {},
   "headers": [
     {
       "source": "/_expo/static/js/(.*)",
@@ -53,7 +52,7 @@
   ],
   "rewrites": [
     {
-      "source": "/((?!_expo|assets|index\\.html|metadata\\.json).*)",
+      "source": "/((?!_expo|assets|metadata\\.json).*)",
       "destination": "/index.html"
     }
   ]
