--- a/vercel.json
+++ b/vercel.json
@@ -52,9 +52,8 @@
   ],
   "rewrites": [
     {
-      "source": "/((?!_expo|assets|index\\.html|metadata\\.json).*)",
+      "source": "/((?!_expo|assets|metadata\\.json).*)",
       "destination": "/index.html"
     }
-  ],
-  "_note": "trigger redeploy"
+  ]
 }
