--- a/vercel.json
+++ b/vercel.json
@@ -4,55 +4,9 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": null,
-  "headers": [
-    {
-      "source": "/_expo/static/js/(.*)",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/javascript; charset=utf-8"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/_expo/static/css/(.*)",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/css; charset=utf-8"
-        },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/_expo/static/(.*\\.(woff|woff2|ttf|eot|svg|png|jpg|jpeg|gif|ico))",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ],
   "rewrites": [
     {
-      "source": "/((?!_expo|assets|metadata\\.json).*)",
+      "source": "/((?!_expo|assets|index\\.html|metadata\\.json).*)",
       "destination": "/index.html"
     }
   ]
